# rust_trading_bot

./: Cargo.toml  README.md
data/: MANAUSDT_15m.parquet.gzip  SANDUSDT_15m.parquet.gzip
src/: bbands_strategy.rs  main.rs
